--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -709,8 +709,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_k30326fltcnhd17tdbwo(i, j, css_id) {
-          var table = document.getElementById("tinytable_k30326fltcnhd17tdbwo");
+      function styleCell_znixhtf5ggnznir8m6dw(i, j, css_id) {
+          var table = document.getElementById("tinytable_znixhtf5ggnznir8m6dw");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -719,8 +719,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_k30326fltcnhd17tdbwo(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_k30326fltcnhd17tdbwo");
+      function spanCell_znixhtf5ggnznir8m6dw(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_znixhtf5ggnznir8m6dw");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -751,20 +751,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_gk13yqtzlxf4tl3hbatr',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_mszhx5aomppnop2wgtwf',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_7jtax8v6hdihlzjrr2bg',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_sv2nxndypocxnnp2vzdb',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_pnm4n4xxn8l5nu7bn2o6',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_v28d0hx9bxn1gta3t8hp',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_021gce6woea9egd6ybgz',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_d9jh420xcb1vqdbirygk',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_y45t8pccysunjpvpxyhv',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_gd60fsgk8sl4w9h9miqn',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_woqraw0fbk50sjrd2ik2',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_epb16pgkostpdrmd3pnp',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_sko74kdn7w6303d9k9q0',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_81agcf1ziqq4x3ezuusb',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_5ym6jbcscw9u6k6iw5ei',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_s2c0d24p0budzml82sjp',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_k30326fltcnhd17tdbwo(cell.i, cell.j, group.css_id);
+                  styleCell_znixhtf5ggnznir8m6dw(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -772,17 +772,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_gk13yqtzlxf4tl3hbatr, .table th.tinytable_css_gk13yqtzlxf4tl3hbatr { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_mszhx5aomppnop2wgtwf, .table th.tinytable_css_mszhx5aomppnop2wgtwf { text-align: center; }
-      .table td.tinytable_css_7jtax8v6hdihlzjrr2bg, .table th.tinytable_css_7jtax8v6hdihlzjrr2bg { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_sv2nxndypocxnnp2vzdb, .table th.tinytable_css_sv2nxndypocxnnp2vzdb { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_pnm4n4xxn8l5nu7bn2o6, .table th.tinytable_css_pnm4n4xxn8l5nu7bn2o6 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_v28d0hx9bxn1gta3t8hp, .table th.tinytable_css_v28d0hx9bxn1gta3t8hp { text-align: left; }
-      .table td.tinytable_css_021gce6woea9egd6ybgz, .table th.tinytable_css_021gce6woea9egd6ybgz { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_d9jh420xcb1vqdbirygk, .table th.tinytable_css_d9jh420xcb1vqdbirygk { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_y45t8pccysunjpvpxyhv, .table th.tinytable_css_y45t8pccysunjpvpxyhv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_gd60fsgk8sl4w9h9miqn, .table th.tinytable_css_gd60fsgk8sl4w9h9miqn { text-align: center; }
+      .table td.tinytable_css_woqraw0fbk50sjrd2ik2, .table th.tinytable_css_woqraw0fbk50sjrd2ik2 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_epb16pgkostpdrmd3pnp, .table th.tinytable_css_epb16pgkostpdrmd3pnp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_sko74kdn7w6303d9k9q0, .table th.tinytable_css_sko74kdn7w6303d9k9q0 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_81agcf1ziqq4x3ezuusb, .table th.tinytable_css_81agcf1ziqq4x3ezuusb { text-align: left; }
+      .table td.tinytable_css_5ym6jbcscw9u6k6iw5ei, .table th.tinytable_css_5ym6jbcscw9u6k6iw5ei { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_s2c0d24p0budzml82sjp, .table th.tinytable_css_s2c0d24p0budzml82sjp { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_k30326fltcnhd17tdbwo" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_znixhtf5ggnznir8m6dw" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -886,8 +886,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_hd87teoloq2bzwch04za(i, j, css_id) {
-          var table = document.getElementById("tinytable_hd87teoloq2bzwch04za");
+      function styleCell_helfrdano4mqewvhzq1d(i, j, css_id) {
+          var table = document.getElementById("tinytable_helfrdano4mqewvhzq1d");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -896,8 +896,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_hd87teoloq2bzwch04za(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_hd87teoloq2bzwch04za");
+      function spanCell_helfrdano4mqewvhzq1d(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_helfrdano4mqewvhzq1d");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -928,20 +928,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_n3nqjvq9ucn8uu32obmb',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_w1gc6hkkjtgupbj78jr4',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_2uu0szibl0vg9utatlmz',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_bvfk2nc5nq3d0vuhsmhf',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_fzzc9zjzx28lvqwbcx70',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_pk1cp1mn85g3dsl3hb6t',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_8hc6gwygi7jlleyl981s',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_sosr9oexzrgqd7tsmawy',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_8qkjzkgbtqo30twumunl',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_i640x8ywcc4iy0kv9oy6',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_g66zmlanq35g5x6oouy6',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_hyby30xf5a8rmxlh6aky',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_hw6qy27euc3lcawp90yu',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_5il1yy1mngy5u2ltxk6u',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_8rk4y4p5pnoavmzerkeo',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_mx9j5cpz0u35detxk1dy',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_hd87teoloq2bzwch04za(cell.i, cell.j, group.css_id);
+                  styleCell_helfrdano4mqewvhzq1d(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -949,17 +949,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_n3nqjvq9ucn8uu32obmb, .table th.tinytable_css_n3nqjvq9ucn8uu32obmb { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_w1gc6hkkjtgupbj78jr4, .table th.tinytable_css_w1gc6hkkjtgupbj78jr4 { text-align: center; }
-      .table td.tinytable_css_2uu0szibl0vg9utatlmz, .table th.tinytable_css_2uu0szibl0vg9utatlmz { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_bvfk2nc5nq3d0vuhsmhf, .table th.tinytable_css_bvfk2nc5nq3d0vuhsmhf { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_fzzc9zjzx28lvqwbcx70, .table th.tinytable_css_fzzc9zjzx28lvqwbcx70 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_pk1cp1mn85g3dsl3hb6t, .table th.tinytable_css_pk1cp1mn85g3dsl3hb6t { text-align: left; }
-      .table td.tinytable_css_8hc6gwygi7jlleyl981s, .table th.tinytable_css_8hc6gwygi7jlleyl981s { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_sosr9oexzrgqd7tsmawy, .table th.tinytable_css_sosr9oexzrgqd7tsmawy { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_8qkjzkgbtqo30twumunl, .table th.tinytable_css_8qkjzkgbtqo30twumunl { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_i640x8ywcc4iy0kv9oy6, .table th.tinytable_css_i640x8ywcc4iy0kv9oy6 { text-align: center; }
+      .table td.tinytable_css_g66zmlanq35g5x6oouy6, .table th.tinytable_css_g66zmlanq35g5x6oouy6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hyby30xf5a8rmxlh6aky, .table th.tinytable_css_hyby30xf5a8rmxlh6aky { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hw6qy27euc3lcawp90yu, .table th.tinytable_css_hw6qy27euc3lcawp90yu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_5il1yy1mngy5u2ltxk6u, .table th.tinytable_css_5il1yy1mngy5u2ltxk6u { text-align: left; }
+      .table td.tinytable_css_8rk4y4p5pnoavmzerkeo, .table th.tinytable_css_8rk4y4p5pnoavmzerkeo { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_mx9j5cpz0u35detxk1dy, .table th.tinytable_css_mx9j5cpz0u35detxk1dy { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_hd87teoloq2bzwch04za" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_helfrdano4mqewvhzq1d" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1318,7 +1318,7 @@ Stinerock, R. (2022). <em><span class="nocase">Statistics with R â€“ A Beginnerâ
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp('/' + window.location.host + '/');
+        var filterRegex = new RegExp("https:\/\/drfloreiche\.github\.io\/PO33Q\/");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
