--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1684,8 +1684,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_fd54cmgq2dnittq82owu(i, j, css_id) {
-          var table = document.getElementById("tinytable_fd54cmgq2dnittq82owu");
+      function styleCell_w961i95f36rqcjl7czip(i, j, css_id) {
+          var table = document.getElementById("tinytable_w961i95f36rqcjl7czip");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1694,8 +1694,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_fd54cmgq2dnittq82owu(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_fd54cmgq2dnittq82owu");
+      function spanCell_w961i95f36rqcjl7czip(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_w961i95f36rqcjl7czip");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1726,26 +1726,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_fj6dm12w5ft6daaclrl7',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_otoc61lriu3uaymhy19y',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_ycoi594ymgnpabuu1i6h',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_21pkqjkobbtczljgj8z3',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_nusi5ohcsrmlc00am8zf',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_var5q77arbzmqz9846hn',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_0720sx1y001w1lk963n3',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_eqtm338vec34smuguljj',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_hdsmytb8wl39vn1plj3l',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_4sbwu0ndjsbg22r447yn',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_1qzpw2qq53j06o40hp22',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_ww6cqovbeik5gt3uoy3j',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_rq56d2e60t7o3ctm8pqk',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_hxccx64sj3k1f8xquex5',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_yp4gyiefaqiv61bo5989',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_20x9e4b3s6161hqcgjm6',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_j7a8cxcm6f8psw4glfnp',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_0k00fdvjarmijyy8itj4',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_lyknzazs3jijkebympmz',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_n40lilg3vtcqqd1x0bdi',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_mh3nlgesnrjgfzjfhhh4',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_bp4nyryqcfa0tk8ca485',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_u9p9d3g3dewlbyfrtt45',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_fyvvz8ks0pd44y40k2sk',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_2x5qef75d5ujmxhads85',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_3same4bbrawqy90wx56x',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ihxkmpwla7tf2q7b8qfx',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_ca0fv80of627al8a1u50',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_fd54cmgq2dnittq82owu(cell.i, cell.j, group.css_id);
+                  styleCell_w961i95f36rqcjl7czip(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1753,23 +1753,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_fj6dm12w5ft6daaclrl7, .table th.tinytable_css_fj6dm12w5ft6daaclrl7 { text-align: center; text-align: center; }
-      .table td.tinytable_css_otoc61lriu3uaymhy19y, .table th.tinytable_css_otoc61lriu3uaymhy19y { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_ycoi594ymgnpabuu1i6h, .table th.tinytable_css_ycoi594ymgnpabuu1i6h { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_21pkqjkobbtczljgj8z3, .table th.tinytable_css_21pkqjkobbtczljgj8z3 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_nusi5ohcsrmlc00am8zf, .table th.tinytable_css_nusi5ohcsrmlc00am8zf { text-align: center; }
-      .table td.tinytable_css_var5q77arbzmqz9846hn, .table th.tinytable_css_var5q77arbzmqz9846hn { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0720sx1y001w1lk963n3, .table th.tinytable_css_0720sx1y001w1lk963n3 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_eqtm338vec34smuguljj, .table th.tinytable_css_eqtm338vec34smuguljj { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_hdsmytb8wl39vn1plj3l, .table th.tinytable_css_hdsmytb8wl39vn1plj3l { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_4sbwu0ndjsbg22r447yn, .table th.tinytable_css_4sbwu0ndjsbg22r447yn { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_1qzpw2qq53j06o40hp22, .table th.tinytable_css_1qzpw2qq53j06o40hp22 { text-align: left; }
-      .table td.tinytable_css_ww6cqovbeik5gt3uoy3j, .table th.tinytable_css_ww6cqovbeik5gt3uoy3j { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_rq56d2e60t7o3ctm8pqk, .table th.tinytable_css_rq56d2e60t7o3ctm8pqk { text-align: left; text-align: center; }
-      .table td.tinytable_css_hxccx64sj3k1f8xquex5, .table th.tinytable_css_hxccx64sj3k1f8xquex5 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_yp4gyiefaqiv61bo5989, .table th.tinytable_css_yp4gyiefaqiv61bo5989 { text-align: center; text-align: center; }
+      .table td.tinytable_css_20x9e4b3s6161hqcgjm6, .table th.tinytable_css_20x9e4b3s6161hqcgjm6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_j7a8cxcm6f8psw4glfnp, .table th.tinytable_css_j7a8cxcm6f8psw4glfnp { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0k00fdvjarmijyy8itj4, .table th.tinytable_css_0k00fdvjarmijyy8itj4 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_lyknzazs3jijkebympmz, .table th.tinytable_css_lyknzazs3jijkebympmz { text-align: center; }
+      .table td.tinytable_css_n40lilg3vtcqqd1x0bdi, .table th.tinytable_css_n40lilg3vtcqqd1x0bdi { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_mh3nlgesnrjgfzjfhhh4, .table th.tinytable_css_mh3nlgesnrjgfzjfhhh4 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_bp4nyryqcfa0tk8ca485, .table th.tinytable_css_bp4nyryqcfa0tk8ca485 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_u9p9d3g3dewlbyfrtt45, .table th.tinytable_css_u9p9d3g3dewlbyfrtt45 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_fyvvz8ks0pd44y40k2sk, .table th.tinytable_css_fyvvz8ks0pd44y40k2sk { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_2x5qef75d5ujmxhads85, .table th.tinytable_css_2x5qef75d5ujmxhads85 { text-align: left; }
+      .table td.tinytable_css_3same4bbrawqy90wx56x, .table th.tinytable_css_3same4bbrawqy90wx56x { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ihxkmpwla7tf2q7b8qfx, .table th.tinytable_css_ihxkmpwla7tf2q7b8qfx { text-align: left; text-align: center; }
+      .table td.tinytable_css_ca0fv80of627al8a1u50, .table th.tinytable_css_ca0fv80of627al8a1u50 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_fd54cmgq2dnittq82owu" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_w961i95f36rqcjl7czip" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2828,7 +2828,7 @@ Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative 
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp('/' + window.location.host + '/');
+        var filterRegex = new RegExp("https:\/\/drfloreiche\.github\.io\/PO33Q\/");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
