--- a/02-PO33Q.html
+++ b/02-PO33Q.html
@@ -1417,7 +1417,7 @@ Stinerock, R. (2022). <em><span class="nocase">Statistics with R â€“ A Beginnerâ
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp('/' + window.location.host + '/');
+        var filterRegex = new RegExp("https:\/\/drfloreiche\.github\.io\/PO33Q\/");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
