--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ window.MathJax = {
   chtml: { font: 'mathjax-fira' }
 };
 </script>
+<meta name="quarto:status" content="draft">
 
 
 <link rel="stylesheet" href="style.css">
@@ -92,7 +93,7 @@ window.MathJax = {
 <body class="nav-sidebar floating nav-fixed quarto-light">
 
 <div id="quarto-search-results"></div>
-  <header id="quarto-header" class="headroom fixed-top">
+  <header id="quarto-header" class="headroom fixed-top"><div id="quarto-draft-alert" class="alert alert-warning"><i class="bi bi-pencil-square"></i>Draft</div>
     <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
@@ -141,11 +142,6 @@ window.MathJax = {
   <nav id="quarto-sidebar" class="sidebar collapse collapse-horizontal quarto-sidebar-collapse-item sidebar-navigation floating overflow-auto">
     <div class="sidebar-menu-container"> 
     <ul class="list-unstyled mt-1">
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
-  <a href="./index.html" class="sidebar-item-text sidebar-link active"><span class="chapter-title">Welcome</span></a>
-  </div>
-</li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="./01-PO33Q.html" class="sidebar-item-text sidebar-link"><span class="chapter-title">Week 1</span></a>
@@ -286,9 +282,6 @@ header#title-block-header, .quarto-title-block { display: block !important; }
 </style>
 <section id="welcome" class="level1 unnumbered">
 <h1 class="unnumbered">Welcome!</h1>
-<p style="text-align: center;">
-<b>!!! site still under construction !!!</b>
-</p>
 <p>Never before has the world witnessed such a high proportion of democracies. But what makes them emerge? How do democracies sustain themselves? What makes some countries such persistent dictatorships? These questions have attracted a huge body of literature in Comparative Politics and make for fascinating empirical research projects. This module will provide you with the statistical tools necessary for such investigations, and thus allow you not only to interpret and critique existing studies in this field but also to research these questions yourself. With no prior knowledge in statistical analysis necessary, we will use real-world data sets and explore the aforementioned questions through the methods of linear and logistic regression, as well as survival analysis.</p>
 <p>This online companion has two purposes: (1) it introduces you to the quantitative methods element of the module, and (2) it provides you with some exercises that we will be working through in the seminars each week. We start with an introduction to R in Week 1, and then move closer and closer to the method you will be using in the final assessment of this module: a Markov Transition Model. As such, the module also follows the methodological evolution that the democratisation literature in general, and the modernisation literature in particular have traversed since the 1950s: from linear regression to a time-series probability model.</p>
 <p>PO33Q is my flagship module and has been lauded by the external examiner as the best of its kind she had seen. A lot of work and love has gone into this module, and I hope you will enjoy taking it as much as I enjoy teaching it.</p>
