--- a/14-bib.html
+++ b/14-bib.html
@@ -366,8 +366,8 @@ Beginner’s Guide</span></em> (Second Edition). Thousand Oaks,
 <span>CA</span>: Sage.
 </div>
 <div id="ref-worldbank:2024" class="csl-entry" role="listitem">
-The World Bank. (n.d.). <em><span>World Development
-Indicators</span></em>. <a href="https://datacatalog.worldbank.org/dataset/world-development-indicators">https://datacatalog.worldbank.org/dataset/world-development-indicators</a>
+World Bank. (n.d.). <em><span>World Development Indicators</span></em>.
+<a href="https://datacatalog.worldbank.org/dataset/world-development-indicators">https://datacatalog.worldbank.org/dataset/world-development-indicators</a>
 </div>
 </div>
 
