--- a/01-PO33Q.html
+++ b/01-PO33Q.html
@@ -699,11 +699,13 @@ Figure&nbsp;5: Folder Structure
 </ul>
 <div class="video">
 <p><strong>Calculating a Mean</strong></p>
-<p>YouTube link to follow</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/F1leGslpR84?si=uPcVhZTaVJDptjUP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="">
+</iframe>
 </div>
 <div class="video">
 <p><strong>Standard Deviation</strong></p>
-<p>YouTube link to follow</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QTL3B17RIdE?si=NuVzNd1TIrgQQmco" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="">
+</iframe>
 </div>
 <div class="puzzle">
 <p>If any of the other terms don’t mean anything to you beyond having heard the term before, please look these up.</p>
