--- a/02-PO33Q.html
+++ b/02-PO33Q.html
@@ -669,10 +669,6 @@ Figure&nbsp;6: The p-Value
 </section>
 <section id="what-is-it" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="what-is-it">What is it?</h2>
-<div class="video">
-<p><strong>Regression - What is it?</strong></p>
-<p>YouTube link to follow</p>
-</div>
 <p>Regression is not only able to identify the direction of a relationship between an independent and a dependent variable, it is also able to quantify the size of the effect. Let us choose <code>y</code> as our dependent variable, and <code>x</code> as our independent variable. We have some data which we are displaying in a scatter plot:</p>
 <div id="fig-scatter" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
@@ -770,7 +766,8 @@ Figure&nbsp;12: Ordinary Least Squares
 </div>
 <div class="video">
 <p><strong>Ordinary Least Squares (OLS)</strong></p>
-<p>YouTube link to follow</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LeJYnD7oVak?si=Zv3veF7wvs-nle_B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="">
+</iframe>
 </div>
 <p>We are now ready to apply this stuff to a PO33Q-related example!</p>
 </section>
@@ -849,7 +846,8 @@ F-statistic: 11.64 on 1 and 26 DF,  p-value: 0.002123</code></pre>
 <h3 class="unnumbered anchored" data-anchor-id="the-all-important-p-value-in-regression">The all-important p-value in Regression</h3>
 <div class="video">
 <p><strong>The p-Value</strong></p>
-<p>YouTube link to follow</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/b88tzcGGb0o?si=yjtorGD2owMsx9pQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="">
+</iframe>
 </div>
 <p>It might seem odd to focus on the p-value before interpreting the coefficients substantively, but this is precisely what you have to do in practice, as well. If a regression coefficient is insignificant, then we have failed to reject the null hypothesis, and have no evidence for a relationship. This is it. This is all you can say. Should this happen to you in the assessment, please do not engage in speculation of “had the coefficient been significant, then it would suggest that…”. No.&nbsp;There is no relationship. State that, and move on. Only if there is a relationship you can move on to interpreting the coefficients substantively.</p>
 <div class="warning">
@@ -977,7 +975,8 @@ Figure&nbsp;21: R-squared output
 </div>
 <div class="video">
 <p><strong>Goodness of Fit</strong></p>
-<p>YouTube link to follow</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5TcetPnpOBo?si=gRlPR7anqs75larP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="">
+</iframe>
 </div>
 <p>As you have seen in the video, the goodness of fit is a measure to indicate how much of the variation in the dependent variable (democracy) the independent variable (per capita GDP) is explaining. For this, we take the ratio of the explained sum of squares over the total sum of squares. The resulting percentage is R<span class="math inline">\(^2\)</span>, also known as the <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">coefficient of determination</a></span>. This number can also be found on the R output, and is in our case <span class="math inline">\(0.3092\)</span>, or 30.92%. This value is not too bad for a single variable! The maximum we can explain is of course 100% with an R-Squared value of 1.0, even though this is a dream never achieved empirically. But we are still quite some distance of this dream, and can probably do better. There surely must be factors other than per capita GDP that explain democracy in Europe in the year 1994.</p>
 </section>
