--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -416,10 +416,6 @@ Probit - Theory &amp; Application
 <section id="probit---theory" class="level1 unnumbered">
 <h1 class="unnumbered">Probit - Theory</h1>
 <p>Last week, we encountered linear regression analysis which allowed us to quantify the amount and direction of one or more independent variables on a continuous dependent variable. I already mentioned there, that there is also a type of a regression which can deal with a binary, or <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">dichotomous</a></span> dependent variable. This is usually a yes/no scenario, such as democracy / autocracy, war / peace, trade agreement / no trade agreement, … You get the picture. Many problems or questions in political science have binary outcomes, and so you are about to learn a very important and useful method to answer research questions. As in the previous Chapter, I will take you through some theory first, and then we are applying the theory to an empirical example.</p>
-<div class="video">
-<p><strong>Probit - What is it?</strong></p>
-<p>YouTube link to follow</p>
-</div>
 <section id="probit---what-is-it" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="probit---what-is-it">Probit - What is it?</h2>
 <p>A question we can all relate to is whether to go out tonight, or not. The “propensity to go out” is not directly observable, and so we call this a <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/13-Glossary.html">latent variable</a></span>. You can imagine this running from minus infinity to plus infinity, and at some point on this continuum you are making the decision to go out. Let’s call this point tau (<span class="math inline">\(\tau\)</span>). Graphically, this would look like this:</p>
@@ -437,7 +433,7 @@ Figure&nbsp;1: Latent Variable
 <p>&nbsp; &nbsp;</p>
 <p>Your inclination to go out, is likely to be influenced by the amount of money you have in your wallet / bank. If you are broke, you will be less inclined (if you are sensible), and if you are swimming in it, you will be more inclined. So, if the “propensity to go out” (which remember is running from minus to plus infinity) is influenced by your budget, then let’s construct a graph, in which we pop the propensity to go out on the y-axis, and the budget on the x-axis. If we assume that this relationship is linear, we can fit a regression line into this coordinate system, just as we have in the previous week:</p>
 <p>&nbsp; &nbsp;</p>
-<p><img src="files/Week 3/prop.png" id="fig-out" class="img-fluid quarto-figure quarto-figure-center anchored" style="width:70.0%" alt="Effect of Budget on Propensity to Go Out"> Whilst this visualises the influence of the budget on the latent variable, what we are aiming for is to make a prediction about the probability of you going out, or not.</p>
+<p><img src="images/Week 3/prop.png" id="fig-out" class="img-fluid quarto-figure quarto-figure-center anchored" style="width:70.0%" alt="Effect of Budget on Propensity to Go Out"> Whilst this visualises the influence of the budget on the latent variable, what we are aiming for is to make a prediction about the probability of you going out, or not.</p>
 <p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>2</span></a>.</p>
 <p>&nbsp; &nbsp;</p>
 <div id="fig-towcdf" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
@@ -704,8 +700,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_85vvjg93w3rt2zp6uo9b(i, j, css_id) {
-          var table = document.getElementById("tinytable_85vvjg93w3rt2zp6uo9b");
+      function styleCell_lrnghy8r26ygxqvvu1tw(i, j, css_id) {
+          var table = document.getElementById("tinytable_lrnghy8r26ygxqvvu1tw");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -714,8 +710,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_85vvjg93w3rt2zp6uo9b(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_85vvjg93w3rt2zp6uo9b");
+      function spanCell_lrnghy8r26ygxqvvu1tw(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_lrnghy8r26ygxqvvu1tw");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -746,20 +742,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_xlqw8tqf9hrfmdssiaon',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_7qldqppmauwctkdhct49',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_n3mx29wtg7mxkaft9hls',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_klk7ubpmrvbsjtqm40st',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_qetadoej7i2u47n1ad88',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_3t4myl0nmtcj13f600rw',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_q5pijnj68uazpkrxzwqc',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_8ezyqtzutha3omsczuyv',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_i1ntylw2r528e7uml9gt',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_75551edm3mfzjj6ca4gg',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_y6fkz8tror7ypx3otfy4',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_9afhbax4e6qamh3mdiic',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_qsvbphtidpczzwustibg',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_5u1yoqz9z330c2b5r2lf',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_5wvbeasx0pjp24g8hzi0',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_xzrmna9ekiz9225a80qa',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_85vvjg93w3rt2zp6uo9b(cell.i, cell.j, group.css_id);
+                  styleCell_lrnghy8r26ygxqvvu1tw(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -767,17 +763,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_xlqw8tqf9hrfmdssiaon, .table th.tinytable_css_xlqw8tqf9hrfmdssiaon { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7qldqppmauwctkdhct49, .table th.tinytable_css_7qldqppmauwctkdhct49 { text-align: center; }
-      .table td.tinytable_css_n3mx29wtg7mxkaft9hls, .table th.tinytable_css_n3mx29wtg7mxkaft9hls { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_klk7ubpmrvbsjtqm40st, .table th.tinytable_css_klk7ubpmrvbsjtqm40st { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qetadoej7i2u47n1ad88, .table th.tinytable_css_qetadoej7i2u47n1ad88 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_3t4myl0nmtcj13f600rw, .table th.tinytable_css_3t4myl0nmtcj13f600rw { text-align: left; }
-      .table td.tinytable_css_q5pijnj68uazpkrxzwqc, .table th.tinytable_css_q5pijnj68uazpkrxzwqc { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_8ezyqtzutha3omsczuyv, .table th.tinytable_css_8ezyqtzutha3omsczuyv { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_i1ntylw2r528e7uml9gt, .table th.tinytable_css_i1ntylw2r528e7uml9gt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_75551edm3mfzjj6ca4gg, .table th.tinytable_css_75551edm3mfzjj6ca4gg { text-align: center; }
+      .table td.tinytable_css_y6fkz8tror7ypx3otfy4, .table th.tinytable_css_y6fkz8tror7ypx3otfy4 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9afhbax4e6qamh3mdiic, .table th.tinytable_css_9afhbax4e6qamh3mdiic { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qsvbphtidpczzwustibg, .table th.tinytable_css_qsvbphtidpczzwustibg { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_5u1yoqz9z330c2b5r2lf, .table th.tinytable_css_5u1yoqz9z330c2b5r2lf { text-align: left; }
+      .table td.tinytable_css_5wvbeasx0pjp24g8hzi0, .table th.tinytable_css_5wvbeasx0pjp24g8hzi0 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_xzrmna9ekiz9225a80qa, .table th.tinytable_css_xzrmna9ekiz9225a80qa { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_85vvjg93w3rt2zp6uo9b" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_lrnghy8r26ygxqvvu1tw" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -881,8 +877,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_pcx4xgz3df16trn4taq7(i, j, css_id) {
-          var table = document.getElementById("tinytable_pcx4xgz3df16trn4taq7");
+      function styleCell_n5qnk8zhxovm36df791j(i, j, css_id) {
+          var table = document.getElementById("tinytable_n5qnk8zhxovm36df791j");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -891,8 +887,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_pcx4xgz3df16trn4taq7(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_pcx4xgz3df16trn4taq7");
+      function spanCell_n5qnk8zhxovm36df791j(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_n5qnk8zhxovm36df791j");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -923,20 +919,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_uk94wufy9rs7xxr5vxsg',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_u1l4amby3shzdh5lhcc3',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_vskwprzlevslmvsyqfkr',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_gyk1rerso46kp55zdkki',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_wixzoc7m537opsxtzccy',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_rnmkknigh69pk5v5nrdc',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_qitt2dcn1t4sccwgu5pm',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_kj36vi3x7ed46kvsn173',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2cqu7bgaj8qlegbuhgxt',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_vxb6o0773p26ody5pjbl',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_fm1iotlb11aunn4tox3k',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_4z62ugbumhvt7lw060cp',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_qlfcxbzcwp43hqbtodf7',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_lfm06grhigrzewxlqkd4',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_wuvdu4037sk2wauxq9s4',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_zc8o5dod5f1ga3ullx5d',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_pcx4xgz3df16trn4taq7(cell.i, cell.j, group.css_id);
+                  styleCell_n5qnk8zhxovm36df791j(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -944,17 +940,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_uk94wufy9rs7xxr5vxsg, .table th.tinytable_css_uk94wufy9rs7xxr5vxsg { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_u1l4amby3shzdh5lhcc3, .table th.tinytable_css_u1l4amby3shzdh5lhcc3 { text-align: center; }
-      .table td.tinytable_css_vskwprzlevslmvsyqfkr, .table th.tinytable_css_vskwprzlevslmvsyqfkr { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_gyk1rerso46kp55zdkki, .table th.tinytable_css_gyk1rerso46kp55zdkki { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wixzoc7m537opsxtzccy, .table th.tinytable_css_wixzoc7m537opsxtzccy { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_rnmkknigh69pk5v5nrdc, .table th.tinytable_css_rnmkknigh69pk5v5nrdc { text-align: left; }
-      .table td.tinytable_css_qitt2dcn1t4sccwgu5pm, .table th.tinytable_css_qitt2dcn1t4sccwgu5pm { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_kj36vi3x7ed46kvsn173, .table th.tinytable_css_kj36vi3x7ed46kvsn173 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_2cqu7bgaj8qlegbuhgxt, .table th.tinytable_css_2cqu7bgaj8qlegbuhgxt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_vxb6o0773p26ody5pjbl, .table th.tinytable_css_vxb6o0773p26ody5pjbl { text-align: center; }
+      .table td.tinytable_css_fm1iotlb11aunn4tox3k, .table th.tinytable_css_fm1iotlb11aunn4tox3k { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_4z62ugbumhvt7lw060cp, .table th.tinytable_css_4z62ugbumhvt7lw060cp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qlfcxbzcwp43hqbtodf7, .table th.tinytable_css_qlfcxbzcwp43hqbtodf7 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_lfm06grhigrzewxlqkd4, .table th.tinytable_css_lfm06grhigrzewxlqkd4 { text-align: left; }
+      .table td.tinytable_css_wuvdu4037sk2wauxq9s4, .table th.tinytable_css_wuvdu4037sk2wauxq9s4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_zc8o5dod5f1ga3ullx5d, .table th.tinytable_css_zc8o5dod5f1ga3ullx5d { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_pcx4xgz3df16trn4taq7" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_n5qnk8zhxovm36df791j" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
